testing/framework/resources/Functional/Failing/json_bracketless/json_bracketless1.e_tsv
{
  "orange" : "yellow",
  "pi
null
{
  "pink" : "lilac"
}
{
  "orange" : "stucco"
}
